DS-2677 Fix frontend validation of numeric parameters
* Removed a custom directive that was replacing too small values with validator.min
* Unified user experience - for now, both too small and too large values are stored
  in the workflow and red-highlighted. There is no implicit replacement.
* Empty numeric parameter values are replaced with defaults on blur to keep
  consistency with backend

--- a/deepsense-attributes-panel/src/attributes-panel/attributes-panel.less
+++ b/deepsense-attributes-panel/src/attributes-panel/attributes-panel.less
@@ -234,7 +234,7 @@
     text-align: center;
   }
 
-  .invalid-param-value {
+  .invalid-param-value, .invalid-param-value:focus {
     border: 1px solid red;
   }
 
